--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,5 @@
 GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
-Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
-              2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
 * Version 3.0.1 (unreleased)
@@ -15,6 +14,10 @@ according to TLS specification (from subject to issuer).
 ** libgnutls: Added GNUTLS_X509_CRT_LIST_FAIL_IF_UNSORTED flag for
 gnutls_x509_crt_list_import. It checks whether the list to be 
 imported is properly sorted.
+
+** doc: Many GTK-DOC improvements.
+
+** i18n: Translations were updated.
 
 ** API and ABI modifications:
 GNUTLS_X509_CRT_LIST_FAIL_IF_UNSORTED: New element in gnutls_certificate_import_flags
