--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 GnuTLS README -- Important introductory notes.
-Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
-              2008, 2009, 2010  Free Software Foundation, Inc.
+Copyright (C) 2000-2011  Free Software Foundation, Inc.
 See the end of this document for copying conditions.
 
 GnuTLS implements the TLS/SSL (Transport Layer Security aka Secure
@@ -108,6 +107,9 @@ the gnutls-extra library is under the GPL.  The gnutls-extra library
 contains the code for "GnuTLS Inner Application" support and the
 OpenSSL compatibility layer.  The gnutls library is located in the
 lib/ directory, while the gnutls-extra library is at libextra/.
+
+For any copyright year range specified as YYYY-ZZZZ in this package
+note that the range specifies every single year in that closed interval.
 
 
 BUGS
